--- a/modules/app/src/main/res/layouts/fragments/layout/grade_laboratory_table_row.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/grade_laboratory_table_row.xml
@@ -11,6 +11,14 @@
             name="grade"
             type="com.lonn.studentassistant.firebaselayer.viewModels.GradeViewModel" />
 
+        <variable
+            name="deletable"
+            type="Boolean" />
+
+        <variable
+            name="editing"
+            type="Boolean" />
+
     </data>
 
     <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
@@ -51,7 +59,7 @@
             style="@style/DarkBlueShadowedH3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.30"
+            android:layout_weight="@{editing?0.20f:0.30f}"
             android:gravity="center"
             android:maxLines="1"
             android:padding="2dp"
@@ -82,5 +90,25 @@
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/entityDeleteButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="4dp"
+            android:layout_weight="0.1"
+            android:onClick="tapRemove"
+            android:scaleType="fitCenter"
+            android:visibility="@{editing!=null &amp;&amp; editing &amp;&amp; deletable!=null &amp;&amp; deletable? View.VISIBLE:View.GONE}"
+            app:layout_constraintBottom_toBottomOf="@id/entityField3"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/entityField1"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
+
+        <RelativeLayout
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
+            android:visibility="@{editing!=null &amp;&amp; editing &amp;&amp; deletable!=null &amp;&amp; deletable? View.VISIBLE:View.GONE}" />
     </TableRow>
 </layout>
