--- a/modules/app/src/main/res/layouts/activities/professorActivity/layout/professor_activity_home_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/professorActivity/layout/professor_activity_home_layout.xml
@@ -36,6 +36,7 @@
 
         <LinearLayout
             style="@style/ScreenLayoutWrapped"
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
