--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_grades_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_grades_layout.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:childEntities="@{grades}"
             android:isTable="@{true}"
+            android:showHeader="@{false}"
             android:shouldContain="@{(grade) -> true}" />
 
     </LinearLayout>
