--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_home_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_home_layout.xml
@@ -38,6 +38,7 @@
             style="@style/ScreenLayoutWrapped"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:orientation="vertical">
 
             <TextView
