--- a/Project/modules/app/src/main/res/layouts/activities/professorActivity/layout/professor_activity_other_activities_layout.xml
+++ b/Project/modules/app/src/main/res/layouts/activities/professorActivity/layout/professor_activity_other_activities_layout.xml
@@ -10,6 +10,8 @@
 
         <import type="com.lonn.studentassistant.firebaselayer.businessLayer.viewModels.OtherActivityViewModel" />
 
+        <import type="com.lonn.studentassistant.firebaselayer.dataAccessLayer.entities.enums.PermissionLevel" />
+
         <variable
             name="otherActivities"
             type="java.util.Collection&lt;OtherActivityViewModel&gt;" />
@@ -46,12 +48,15 @@
                 android:orientation="vertical">
 
                 <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:id="@+id/activitiesCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:childEntities="@{otherActivities}"
                     android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_TITLE_COMPARATOR}"
-                    android:entityName="@{`other activity`}"
-                    android:permissionLevel="@{permissionLevel}"
+                    android:entityName="@{`activity`}"
+                    android:permissionLevel="@{PermissionLevel.WRITE}"
+                    android:editing="@{true}"
+                    android:canAdd="@{true}"
                     android:showEmpty="@{false}"
                     android:showHeader="@{false}" />
 
