Fixed schedule not updated correctly in real-time bug. Fixed courses page not updating when a discipline is deleted. Fixed notifications bug which caused some notifications to not send. Modified schedule table row to display groups. Fixed the appearance of the home page next classes and the bug which caused them to not update in real time.

--- a/Project/modules/app/src/main/res/layouts/activities/courseEntityActivity/layout/course_entity_activity_layout.xml
+++ b/Project/modules/app/src/main/res/layouts/activities/courseEntityActivity/layout/course_entity_activity_layout.xml
@@ -176,8 +176,8 @@
                     android:entityName="@{`grades`}"
                     android:isTable="@{true}"
                     android:permissionLevel="@{permissionLevel}"
-                    android:viewType="@{EntityViewType.FULL}"
-                    android:showEmpty="@{false}">
+                    android:showEmpty="@{false}"
+                    android:viewType="@{EntityViewType.FULL}">
 
                     <include
                         layout="@layout/grade_course_table_header"
@@ -254,7 +254,7 @@
                     android:entityName="@{`one time class`}"
                     android:isTable="@{true}"
                     android:permissionLevel="@{permissionLevel}"
-                    android:showAddButtonFirstLayer="@{true}"
+                    android:showAddButtonFirstLayer="@{oneTimeClasses.values().size() == 0?false : true}"
                     android:showEmpty="@{true}"
                     android:subcategoryDynamicGeneratorFunction="@{(category) -> CategoryGenerator.oneTimeScheduleCategories((CategoryViewModel) category, oneTimeClasses.values())}" />
             </LinearLayout>
