--- a/Project/modules/app/src/main/res/layouts/dialogs/layout/course_input_dialog.xml
+++ b/Project/modules/app/src/main/res/layouts/dialogs/layout/course_input_dialog.xml
@@ -34,6 +34,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingEnd="8dp"
+            android:paddingStart="8dp"
             android:orientation="vertical">
 
             <LinearLayout
