--- a/Project/modules/app/src/main/res/layouts/fragments/layout/one_time_class_table_row.xml
+++ b/Project/modules/app/src/main/res/layouts/fragments/layout/one_time_class_table_row.xml
@@ -20,7 +20,7 @@
 
     <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:layout_marginTop="-2dp"
         android:background="@drawable/table_line"
         android:gravity="center"
@@ -35,7 +35,7 @@
             style="@style/DarkBlueShadowedH3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.10"
+            android:layout_weight="0.15"
             android:gravity="center"
             android:lines="2"
             android:padding="2dp"
@@ -49,18 +49,40 @@
             android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark" />
 
-        <TextView
-            style="@style/DarkBlueShadowedH3"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="@{editing!=null &amp;&amp; editing &amp;&amp; deletable!=null &amp;&amp; deletable? 0.5f:0.55f}"
-            android:gravity="center"
-            android:maxLines="@{3}"
-            android:padding="2dp"
-            android:text="@{oneTimeClass.disciplineName}"
-            app:autoSizeMaxTextSize="15sp"
-            app:autoSizeMinTextSize="12sp"
-            app:autoSizeTextType="uniform" />
+            android:layout_weight="@{editing!=null &amp;&amp; editing &amp;&amp; deletable!=null &amp;&amp; deletable? 0.45f:0.50f}"
+            android:orientation="vertical"
+            android:weightSum="1">
+
+            <TextView
+                style="@style/DarkBlueShadowedH3"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.65"
+                android:gravity="center"
+                android:maxLines="@{2}"
+                android:padding="2dp"
+                android:text="@{oneTimeClass.disciplineName}"
+                app:autoSizeMaxTextSize="18sp"
+                app:autoSizeMinTextSize="10sp"
+                app:autoSizeTextType="uniform" />
+
+            <TextView
+                style="@style/DarkBlueShadowedH3"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.35"
+                android:gravity="center"
+                android:singleLine="true"
+                android:padding="2dp"
+                android:text="@{oneTimeClass.formattedType}"
+                app:autoSizeMaxTextSize="15sp"
+                app:autoSizeMinTextSize="8sp"
+                app:autoSizeTextType="uniform" />
+
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="2dp"
@@ -80,17 +102,12 @@
                 android:layout_height="0dp"
                 android:layout_weight="0.5"
                 android:gravity="center"
-                android:singleLine="true"
                 android:padding="2dp"
-                android:text="@{oneTimeClass.formattedType}"
-                app:autoSizeMaxTextSize="14sp"
+                android:maxLines="1"
+                android:text="@{oneTimeClass.groupsStr.length() == 0? `All groups`: oneTimeClass.groupsStr}"
+                app:autoSizeMaxTextSize="18sp"
                 app:autoSizeMinTextSize="10sp"
                 app:autoSizeTextType="uniform" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/colorPrimaryDark" />
 
             <TextView
                 style="@style/DarkBlueShadowedH3"
@@ -101,8 +118,8 @@
                 android:maxLines="2"
                 android:padding="2dp"
                 android:text="@{oneTimeClass.rooms}"
-                app:autoSizeMaxTextSize="12sp"
-                app:autoSizeMinTextSize="8sp"
+                app:autoSizeMaxTextSize="18sp"
+                app:autoSizeMinTextSize="10sp"
                 app:autoSizeTextType="uniform" />
 
         </LinearLayout>
